# Variational-Quantum-Classifier

./: FINDINGS.md  iris_xor_qvc.ipynb  pyproject.toml
experiments/: iris_xor_qvc.ipynb  vqc_moons.ipynb  vqc_xor.ipynb
